Thu Apr 25 06:51:58 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/CDR_Base.h (ACE_CDR): Improved the documentation of the consolidate()
	  method.  Thanks to Alain Decamps for helping with this.

Thu Apr 25 03:34:43 2002  Irfan Pyarali  <irfan@cs.wustl.edu>

	* tests/MT_Reactor_Upcall_Test.cpp: Changed the test such that the
	  end of the test is indicated by a shutdown message rather than
	  an explicit message count.

Wed Apr 24 23:39:00 2002  Irfan Pyarali  <irfan@cs.wustl.edu>

	* examples/Reactor/WFMO_Reactor: Updated file names to match
	  executable names.

Thu Apr 25 07:34:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.h:
          Doxygen-ized some of the comments

Wed Apr 24 18:53:56 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* include/makeinclude/rules.local.GNU (clean.local): Reverted the
	  change "Wed Apr 24 16:08:30 2002  Balachandran Natarajan
	  <bala@cs.wustl.edu>" since it is bogus.

Wed Apr 24 16:08:30 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* include/makeinclude/rules.local.GNU: Added a rule to clean up
	  Sunws_cache properly. Should help SunCC5_1 builds.

Wed Apr 24 11:07:15 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/RMCast/Makefile (FILES): Removed a stray "\".  Thanks to
	  Amir Kunst <amir@fats.co.il> for reporting this.  Also reordered the files
	  so they would be in alphabetical order.

Wed Apr 24 11:17:31 2002  Steve Huston  <shuston@riverace.com>

        * PROBLEM-REPORT-FORM: Always ask for config.h and
          platform_macros.GNU; not just on compilation issues.

Wed Apr 24 07:56:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Future_Set.h:
          Converted a comment to javadoc style because it is very long for
          the brief documentation.

        * ace/DEV_IO.h:
        * ace/TTY_IO.h:
          Removed not needed includes

Wed Apr 24 03:14:11 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
